[package]
name = "winsfs-cli"
version = "0.6.0"
edition = "2021"
rust-version = "1.62"
description = "Site frequency spectrum estimation based on window expectation-maximisation algorithm"
homepage = "https://github.com/malthesr/winsfs"
repository = "https://github.com/malthesr/winsfs"

[[bin]]
name = "winsfs"
path = "src/main.rs"

[dev-dependencies]
pretty_assertions = "1.2"

[dependencies]
angsd-io = { git = "https://github.com/malthesr/angsd-io.git", rev = "94c7ded" }
atty = "0.2"
clap = { version = "3.1", features = ["derive"] }
log = "0.4"
rand = "0.8"
simple_logger = { version = "2.1", default-features = false, features = ["stderr"] }
winsfs-core = { path = "../winsfs-core" }

