[package]
name = "winsfs-cli"
version = "0.7.0"
edition = "2021"
rust-version = "1.62"
license = "MIT"
description = "Site frequency spectrum estimation based on window expectation-maximisation algorithm"
homepage = "https://github.com/malthesr/winsfs"
repository = "https://github.com/malthesr/winsfs"
exclude = ["tests/"] # Golden test files are too large to publish

[[bin]]
name = "winsfs"
path = "src/main.rs"

[dev-dependencies]
pretty_assertions = "1.2"

[dependencies]
angsd-saf = "0.1"
atty = "0.2"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
rand = "0.8"
rayon = "1.5"
simple_logger = { version = "2.1", default-features = false, features = ["stderr"] }
winsfs-core = { version = "0.1", path = "../winsfs-core" }

