[package]
name = "winsfs-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.62"
license = "MIT"
description = "Site frequency spectrum estimation based on window expectation-maximisation algorithm"
homepage = "https://github.com/malthesr/winsfs"
repository = "https://github.com/malthesr/winsfs"

[features]
default = ["angsd-saf/libdeflate"]

[dev-dependencies]
approx = "0.5"
tempfile = "3.3"

[dependencies]
angsd-saf = { git = "https://github.com/malthesr/angsd-io.git", rev = "a35c079" }
byteorder = "1.4"
nom = "7.1"
rand = "0.8"
rayon = "1.5"
