[package]
name = "winsfs-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.62"
license = "MIT"
description = "Site frequency spectrum estimation based on window expectation-maximisation algorithm"
homepage = "https://github.com/malthesr/winsfs"
repository = "https://github.com/malthesr/winsfs"

[features]
default = ["angsd-saf/libdeflate"]
npy = ["zip"]

[dev-dependencies]
tempfile = "3.3"

[dependencies]
angsd-saf = "0.1"
byteorder = "1.4"
nom = "7.1"
rand = "0.8"
rayon = "1.6"
zip = { version = "0.6", default-features = false, optional = true }
