[package]
name = "winsfs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Site frequency spectrum estimation based on window expectation-maximisation algorithm"
homepage = "https://github.com/malthesr/winsfs"
repository = "https://github.com/malthesr/winsfs"

[features]
default = ["angsd-io/libdeflate"]

[dev-dependencies]
approx = "0.5"

[dependencies]
angsd-io = { git = "https://github.com/malthesr/angsd-io.git", rev = "62a4695" }
log = "0.4"
rand = "0.8"
rayon = "1.5"
